force-app/main/default/objects/KContrat__c/KContrat__c.object-meta.xml
<CustomObject>
    <label>Contrat (K)</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contrats (K)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>