force-app/main/default/objects/KContrat__c/fields/autreCompte__c.field-meta.xml
<CustomField>
    <fullName>autreCompte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autre compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats (K) (Autre compte)</relationshipLabel>
    <relationshipName>autreCompteContrats</relationshipName>
    <type>Lookup</type>
</CustomField>