force-app/main/default/objects/KContrat__c/fields/cartoInstallationDeDemain__c.field-meta.xml
<CustomField>
    <fullName>cartoInstallationDeDemain__c</fullName>
    <label>Installation de demain</label>
    <type>Date</type>
</CustomField>