force-app/main/default/objects/KContrat__c/fields/cartoInstallationDuJour__c.field-meta.xml
<CustomField>
    <fullName>cartoInstallationDuJour__c</fullName>
    <label>Installation du jour</label>
    <type>Date</type>
</CustomField>