force-app/main/default/objects/KContrat__c/fields/cartoInterventionSAVDeDemain__c.field-meta.xml
<CustomField>
    <fullName>cartoInterventionSAVDeDemain__c</fullName>
    <label>Intervention SAV de demain</label>
    <type>Date</type>
</CustomField>