force-app/main/default/objects/KContrat__c/fields/cartoInterventionSAVDuJour__c.field-meta.xml
<CustomField>
    <fullName>cartoInterventionSAVDuJour__c</fullName>
    <label>Intervention SAV du jour</label>
    <type>Date</type>
</CustomField>