force-app/main/default/objects/KContrat__c/fields/cartoMetrageDeDemain__c.field-meta.xml
<CustomField>
    <fullName>cartoMetrageDeDemain__c</fullName>
    <label>Métrage de demain</label>
    <type>Date</type>
</CustomField>