force-app/main/default/objects/KContrat__c/fields/cartoMetrageDuJour__c.field-meta.xml
<CustomField>
    <fullName>cartoMetrageDuJour__c</fullName>
    <label>Métrage du jour</label>
    <type>Date</type>
</CustomField>