force-app/main/default/objects/KContrat__c/fields/chantier__c.field-meta.xml
<CustomField>
    <fullName>chantier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client chantier du contrat</description>
    <label>Chantier</label>
    <referenceTo>Chantier__c</referenceTo>
    <relationshipLabel>Contrats (K)</relationshipLabel>
    <relationshipName>chantierContrats</relationshipName>
    <type>Lookup</type>
</CustomField>