force-app/main/default/objects/KContrat__c/fields/compte__c.field-meta.xml
<CustomField>
    <fullName>compte__c</fullName>
    <description>Client signataire du contrat</description>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats (K)</relationshipLabel>
    <relationshipName>compteContrats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>