force-app/main/default/objects/KContrat__c/fields/dateECS__c.field-meta.xml
<CustomField>
    <fullName>dateECS__c</fullName>
    <description>Date de dernière mise à jour de l&apos;écart de cotation service</description>
    <label>Date de l&apos;ECS</label>
    <type>Date</type>
</CustomField>