force-app/main/default/objects/KContrat__c/fields/DateEnvoiAvisTrustpilot__c.field-meta.xml
<CustomField>
    <fullName>DateEnvoiAvisTrustpilot__c</fullName>
    <description>Date à laquelle une demande d&apos;avis sur le contrat (questionnaire Trustpilot) a été envoyée au client</description>
    <label>Date d&apos;envoi de l&apos;avis Trustpilot</label>
    <type>Date</type>
</CustomField>