force-app/main/default/objects/KContrat__c/fields/dateEnvoiEmailSATCLI__c.field-meta.xml
<CustomField>
    <fullName>dateEnvoiEmailSATCLI__c</fullName>
    <description>Date d&apos;envoi de l&apos;email au client pour la questionnaire SATCLI.
Mis à jour par le Journey Builder &quot;E-mail SATCLI&quot; de Marketing Cloud</description>
    <label>Date envoi e-mail (SATCLI)</label>
    <type>DateTime</type>
</CustomField>