force-app/main/default/objects/KContrat__c/fields/dateEnvoiOdigoSATCLI__c.field-meta.xml
<CustomField>
    <fullName>dateEnvoiOdigoSATCLI__c</fullName>
    <description>Date/heure d&apos;envoi de la demande de d&apos;appel à Odigo pour SATCLI</description>
    <label>Date envoi Odigo (SATCLI)</label>
    <type>DateTime</type>
</CustomField>