force-app/main/default/objects/KContrat__c/fields/dateFinGarantie__c.field-meta.xml
<CustomField>
    <fullName>dateFinGarantie__c</fullName>
    <description>Date de fin de la garantie</description>
    <label>Date de fin de garantie</label>
    <type>Date</type>
</CustomField>