force-app/main/default/objects/KContrat__c/fields/datePremierIEC__c.field-meta.xml
<CustomField>
    <fullName>datePremierIEC__c</fullName>
    <label>Date du 1er IEC</label>
    <type>Date</type>
</CustomField>