force-app/main/default/objects/KContrat__c/fields/dateReponseQuestionnaire__c.field-meta.xml
<CustomField>
    <fullName>dateReponseQuestionnaire__c</fullName>
    <description>Date de saisie du questionnaire de satisfaction par le client</description>
    <label>Date réponse questionnaire</label>
    <type>Date</type>
</CustomField>