force-app/main/default/objects/KContrat__c/fields/dateResiliation__c.field-meta.xml
<CustomField>
    <fullName>dateResiliation__c</fullName>
    <description>Date de résiliation du contrat</description>
    <label>Date de résiliation</label>
    <type>Date</type>
</CustomField>