force-app/main/default/objects/KContrat__c/fields/dateSignature__c.field-meta.xml
<CustomField>
    <fullName>dateSignature__c</fullName>
    <description>Date de signature du contrat</description>
    <label>Date de signature</label>
    <type>Date</type>
</CustomField>