force-app/main/default/objects/KContrat__c/fields/dateStatistique__c.field-meta.xml
<CustomField>
    <fullName>dateStatistique__c</fullName>
    <label>Date statistique</label>
    <type>Date</type>
</CustomField>