force-app/main/default/objects/KContrat__c/fields/dateStatutContrat__c.field-meta.xml
<CustomField>
    <fullName>dateStatutContrat__c</fullName>
    <description>Date d&apos;application du statut du contrat</description>
    <label>Date de statut du contrat</label>
    <type>Date</type>
</CustomField>