force-app/main/default/objects/KContrat__c/fields/dateStatutDernierSAV__c.field-meta.xml
<CustomField>
    <fullName>dateStatutDernierSAV__c</fullName>
    <description>Date d&apos;application du statut du dernier dossier SAV</description>
    <label>Date de statut du dernier dossier SAV</label>
    <type>Date</type>
</CustomField>