force-app/main/default/objects/KContrat__c/fields/debutDernierSAV__c.field-meta.xml
<CustomField>
    <fullName>debutDernierSAV__c</fullName>
    <description>Date de déclaration du dernier dossier SAV</description>
    <label>Création du dernier dossier SAV</label>
    <type>Date</type>
</CustomField>