force-app/main/default/objects/KContrat__c/fields/depot__c.field-meta.xml
<CustomField>
    <fullName>depot__c</fullName>
    <label>Dépôt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>