force-app/main/default/objects/KContrat__c/fields/depotChantier__c.field-meta.xml
<CustomField>
    <fullName>depotChantier__c</fullName>
    <label>Dépôt chantier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>