force-app/main/default/objects/KContrat__c/fields/dernierDiagnosticECI__c.field-meta.xml
<CustomField>
    <fullName>dernierDiagnosticECI__c</fullName>
    <description>Date du dernier rendez-vous d&apos;installation/ECI</description>
    <label>Dernier diagnostic ECI</label>
    <type>Date</type>
</CustomField>