force-app/main/default/objects/KContrat__c/fields/dernierDiagnosticSAV__c.field-meta.xml
<CustomField>
    <fullName>dernierDiagnosticSAV__c</fullName>
    <description>Date du dernier  rendez-vous de diagnostic SAV</description>
    <label>Dernier diagnostic SAV</label>
    <type>Date</type>
</CustomField>