force-app/main/default/objects/KContrat__c/fields/derniereInstallation__c.field-meta.xml
<CustomField>
    <fullName>derniereInstallation__c</fullName>
    <description>Date du dernier rendez-vous d&apos;installation/ECI</description>
    <label>Dernière installation</label>
    <type>Date</type>
</CustomField>