force-app/main/default/objects/KContrat__c/fields/derniereInterventionSAV__c.field-meta.xml
<CustomField>
    <fullName>derniereInterventionSAV__c</fullName>
    <description>Date du dernier rendez-vous d&apos;intervention SAV</description>
    <label>Dernière intervention SAV</label>
    <type>Date</type>
</CustomField>