force-app/main/default/objects/KContrat__c/fields/dernierMetrage__c.field-meta.xml
<CustomField>
    <fullName>dernierMetrage__c</fullName>
    <description>Date du dernier rendez-vous de métrage</description>
    <label>Dernier métrage</label>
    <type>Date</type>
</CustomField>