force-app/main/default/objects/KContrat__c/fields/devis__c.field-meta.xml
<CustomField>
    <fullName>devis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Devis de référence pour la création du contrat</description>
    <label>Devis</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>devisContrats</relationshipName>
    <type>Lookup</type>
</CustomField>