force-app/main/default/objects/KContrat__c/fields/DRServiceChantier__c.field-meta.xml
<CustomField>
    <fullName>DRServiceChantier__c</fullName>
    <label>DR service chantier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>