force-app/main/default/objects/KContrat__c/fields/DRVendeur__c.field-meta.xml
<CustomField>
    <fullName>DRVendeur__c</fullName>
    <label>DR vendeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>