force-app/main/default/objects/KContrat__c/fields/DRVenteChantier__c.field-meta.xml
<CustomField>
    <fullName>DRVenteChantier__c</fullName>
    <label>DR vente chantier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>