force-app/main/default/objects/KContrat__c/fields/ECS__c.field-meta.xml
<CustomField>
    <fullName>ECS__c</fullName>
    <label>ECS (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>