force-app/main/default/objects/KContrat__c/fields/elligibleDotationParrainage__c.field-meta.xml
<CustomField>
    <fullName>elligibleDotationParrainage__c</fullName>
    <formula>AND(
  libelleStatutContrat__c != &apos;Contrats non commandables&apos;,
  libelleStatutContrat__c != &apos;Contrats non commandes&apos;,
  libelleStatutContrat__c != &apos;Contrats non confirmes&apos;,
  libelleStatutContrat__c != &apos;Contrats non metrables&apos;,
  libelleStatutContrat__c != &apos;Contrats non metres non progra.&apos;,
  libelleStatutContrat__c != &apos;Contrats non metres programme&apos;,
  libelleStatutContrat__c != &apos;Contrats resilies&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elligible dotation parrainage</label>
    <type>Checkbox</type>
</CustomField>