force-app/main/default/objects/KContrat__c/fields/emailCompte__c.field-meta.xml
<CustomField>
    <fullName>emailCompte__c</fullName>
    <formula>compte__r.email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-mail du compte</label>
    <type>Text</type>
</CustomField>