force-app/main/default/objects/KContrat__c/fields/finDernierSAV__c.field-meta.xml
<CustomField>
    <fullName>finDernierSAV__c</fullName>
    <description>Date de clôture du dernier dossier SAV</description>
    <label>Fermeture du dernier dossier SAV</label>
    <type>Date</type>
</CustomField>