force-app/main/default/objects/KContrat__c/fields/identificationSummary__c.field-meta.xml
<CustomField>
    <fullName>identificationSummary__c</fullName>
    <formula>numeroContrat__c + &apos; - &apos; +  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Résumé (Identification)</label>
    <type>Text</type>
</CustomField>