force-app/main/default/objects/KContrat__c/fields/intervDernierDiagnosticECI__c.field-meta.xml
<CustomField>
    <fullName>intervDernierDiagnosticECI__c</fullName>
    <label>Intervenants (DDE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>