force-app/main/default/objects/KContrat__c/fields/intervDernierDiagnosticSAV__c.field-meta.xml
<CustomField>
    <fullName>intervDernierDiagnosticSAV__c</fullName>
    <label>Intervenants (DDS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>