force-app/main/default/objects/KContrat__c/fields/intervDerniereInstallation__c.field-meta.xml
<CustomField>
    <fullName>intervDerniereInstallation__c</fullName>
    <label>Intervenants (DI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>