force-app/main/default/objects/KContrat__c/fields/intervDerniereInterventionSAV__c.field-meta.xml
<CustomField>
    <fullName>intervDerniereInterventionSAV__c</fullName>
    <label>Intervenants (DIS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>