force-app/main/default/objects/KContrat__c/fields/intervDernierMetrage__c.field-meta.xml
<CustomField>
    <fullName>intervDernierMetrage__c</fullName>
    <label>Intervenants (DM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>