force-app/main/default/objects/KContrat__c/fields/intervenantInstallation__c.field-meta.xml
<CustomField>
    <fullName>intervenantInstallation__c</fullName>
    <description>Intervenant installation</description>
    <inlineHelpText>Intervenant installation</inlineHelpText>
    <label>Intervenant RDV installation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>