force-app/main/default/objects/KContrat__c/fields/intervenantMetrage__c.field-meta.xml
<CustomField>
    <fullName>intervenantMetrage__c</fullName>
    <description>Intervenant Métrage</description>
    <inlineHelpText>Intervenant Métrage</inlineHelpText>
    <label>Intervenant RDV métrage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>