force-app/main/default/objects/KContrat__c/fields/intervenantSAV__c.field-meta.xml
<CustomField>
    <fullName>intervenantSAV__c</fullName>
    <description>Intervenant SAV</description>
    <inlineHelpText>Intervenant SAV</inlineHelpText>
    <label>Intervenant RDV SAV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>