force-app/main/default/objects/KContrat__c/fields/intervPremierDiagnosticECI__c.field-meta.xml
<CustomField>
    <fullName>intervPremierDiagnosticECI__c</fullName>
    <label>Intervenants (PDE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>