force-app/main/default/objects/KContrat__c/fields/intervPremierDiagnosticSAV__c.field-meta.xml
<CustomField>
    <fullName>intervPremierDiagnosticSAV__c</fullName>
    <label>Intervenants (PDS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>