force-app/main/default/objects/KContrat__c/fields/intervPremiereInstallation__c.field-meta.xml
<CustomField>
    <fullName>intervPremiereInstallation__c</fullName>
    <label>Intervenants (PI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>