force-app/main/default/objects/KContrat__c/fields/intervPremiereInterventionSAV__c.field-meta.xml
<CustomField>
    <fullName>intervPremiereInterventionSAV__c</fullName>
    <label>Intervenants (PIS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>