force-app/main/default/objects/KContrat__c/fields/intervPremierMetrage__c.field-meta.xml
<CustomField>
    <fullName>intervPremierMetrage__c</fullName>
    <label>Intervenants (PM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>