force-app/main/default/objects/KContrat__c/fields/libelleStatutContrat__c.field-meta.xml
<CustomField>
    <fullName>libelleStatutContrat__c</fullName>
    <description>Statut du contrat</description>
    <externalId>true</externalId>
    <label>Statut du contrat</label>
    <length>100</length>
    <type>Text</type>
</CustomField>