force-app/main/default/objects/KContrat__c/fields/libelleStatutDernierSAV__c.field-meta.xml
<CustomField>
    <fullName>libelleStatutDernierSAV__c</fullName>
    <description>Statut du dernier dossier SAV</description>
    <label>Statut du dernier dossier SAV</label>
    <length>100</length>
    <type>Text</type>
</CustomField>