force-app/main/default/objects/KContrat__c/fields/magasin__c.field-meta.xml
<CustomField>
    <fullName>magasin__c</fullName>
    <label>Magasin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>