force-app/main/default/objects/KContrat__c/fields/matriculeVendeur__c.field-meta.xml
<CustomField>
    <fullName>matriculeVendeur__c</fullName>
    <description>Matricule/SGID du vendeur du contrat</description>
    <label>Matricule</label>
    <length>20</length>
    <type>Text</type>
</CustomField>