force-app/main/default/objects/KContrat__c/fields/montantECS__c.field-meta.xml
<CustomField>
    <fullName>montantECS__c</fullName>
    <description>Ecart de cotation service en valeur</description>
    <label>Montant de l&apos;ECS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>