force-app/main/default/objects/KContrat__c/fields/montantECSTTC__c.field-meta.xml
<CustomField>
    <fullName>montantECSTTC__c</fullName>
    <label>Montant de l&apos;ECS (TTC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>