force-app/main/default/objects/KContrat__c/fields/montantHT__c.field-meta.xml
<CustomField>
    <fullName>montantHT__c</fullName>
    <description>Montant HT du contrat</description>
    <label>Montant HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>