force-app/main/default/objects/KContrat__c/fields/montantTTC__c.field-meta.xml
<CustomField>
    <fullName>montantTTC__c</fullName>
    <description>Montant TTC du contrat</description>
    <label>Montant TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>