force-app/main/default/objects/KContrat__c/fields/motifResiliation__c.field-meta.xml
<CustomField>
    <fullName>motifResiliation__c</fullName>
    <description>Motif de résiliation du contrat</description>
    <label>Motif de résiliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>