force-app/main/default/objects/KContrat__c/fields/nbSAVTotal__c.field-meta.xml
<CustomField>
    <fullName>nbSAVTotal__c</fullName>
    <description>Nombre total de dossiers SAV depuis la création du contrat</description>
    <label>Nombre total de dossiers SAV</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>