force-app/main/default/objects/KContrat__c/fields/nbStarsTrustpilot__c.field-meta.xml
<CustomField>
    <fullName>nbStarsTrustpilot__c</fullName>
    <description>Nombre d&apos;étoiles de l&apos;avis Trustpilot qu&apos;à donné le client sur le contrat.</description>
    <label>Nombre d&apos;étoiles de l&apos;avis Trustpilot</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>