force-app/main/default/objects/KContrat__c/fields/nbTotalIEC__c.field-meta.xml
<CustomField>
    <fullName>nbTotalIEC__c</fullName>
    <formula>nbIECEnCours__c +  nbIECTermines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre total d&apos;IEC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>