force-app/main/default/objects/KContrat__c/fields/nombreDiagnosticsECI__c.field-meta.xml
<CustomField>
    <fullName>nombreDiagnosticsECI__c</fullName>
    <description>Nombre de rendez-vous d&apos;installation/ECI</description>
    <label>Nombre de diagnostics ECI</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>