force-app/main/default/objects/KContrat__c/fields/nombreDiagnosticsSAV__c.field-meta.xml
<CustomField>
    <fullName>nombreDiagnosticsSAV__c</fullName>
    <description>Nombre de rendez-vous de diagnostics SAV</description>
    <label>Nombre de diagnostics SAV</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>