force-app/main/default/objects/KContrat__c/fields/nombreInstallations__c.field-meta.xml
<CustomField>
    <fullName>nombreInstallations__c</fullName>
    <description>Nombre de rendez-vous d&apos;installation/ECI</description>
    <label>Nombre d&apos;installations</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>