force-app/main/default/objects/KContrat__c/fields/nombreInterventionsSAV__c.field-meta.xml
<CustomField>
    <fullName>nombreInterventionsSAV__c</fullName>
    <description>Nombre de rendez-vous d&apos;interventions SAV</description>
    <label>Nombre d&apos;interventions SAV</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>