force-app/main/default/objects/KContrat__c/fields/nombreMetrages__c.field-meta.xml
<CustomField>
    <fullName>nombreMetrages__c</fullName>
    <description>Nombre de rendez-vous de métrage</description>
    <label>Nombre de métrages</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>