force-app/main/default/objects/KContrat__c/fields/nomCompte__c.field-meta.xml
<CustomField>
    <fullName>nomCompte__c</fullName>
    <formula>IF(compte__r.IsPersonAccount, compte__r.civilite__c+&apos; &apos;+compte__r.FirstName+&apos; &apos;+compte__r.LastName, compte__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom du compte</label>
    <type>Text</type>
</CustomField>