force-app/main/default/objects/KContrat__c/fields/nomVendeur__c.field-meta.xml
<CustomField>
    <fullName>nomVendeur__c</fullName>
    <description>Nom et prénom du vendeur du contrat</description>
    <label>Vendeur</label>
    <length>100</length>
    <type>Text</type>
</CustomField>