force-app/main/default/objects/KContrat__c/fields/NPSRecommandation__c.field-meta.xml
<CustomField>
    <fullName>NPSRecommandation__c</fullName>
    <label>NPS Recommandation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>