force-app/main/default/objects/KContrat__c/fields/NPSSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>NPSSatisfaction__c</fullName>
    <label>NPS Satisfaction</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>