force-app/main/default/objects/KContrat__c/fields/numeroContrat__c.field-meta.xml
<CustomField>
    <fullName>numeroContrat__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Numéro de contrat</description>
    <externalId>true</externalId>
    <label>N° contrat</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>