force-app/main/default/objects/KContrat__c/fields/ongoing__c.field-meta.xml
<CustomField>
    <fullName>ongoing__c</fullName>
    <formula>AND(LOWER(libelleStatutContrat__c) != &apos;contrats en sav&apos;,
    LOWER(libelleStatutContrat__c) != &apos;contrats resilies&apos;,
    LOWER(libelleStatutContrat__c) != &apos;contrats soldes&apos;,
    LOWER(libelleStatutContrat__c) != &apos;etat inconnu&apos;,
    LOWER(libelleStatutContrat__c) != &apos;solde&apos;,
    LOWER(libelleStatutContrat__c) != &apos;soldé&apos;,
    LOWER(libelleStatutContrat__c) != &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] En cours</label>
    <type>Checkbox</type>
</CustomField>