force-app/main/default/objects/KContrat__c/fields/pourcentageECS__c.field-meta.xml
<CustomField>
    <fullName>pourcentageECS__c</fullName>
    <description>Ecart de cotation service en pourcentage</description>
    <label>Pourcentage de l&apos;ECS</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>