force-app/main/default/objects/KContrat__c/fields/premierDiagnosticECI__c.field-meta.xml
<CustomField>
    <fullName>premierDiagnosticECI__c</fullName>
    <description>Date du premier rendez-vous de diagnostic installation/ECI</description>
    <label>Premier diagnostic ECI</label>
    <type>Date</type>
</CustomField>