force-app/main/default/objects/KContrat__c/fields/premierDiagnosticSAV__c.field-meta.xml
<CustomField>
    <fullName>premierDiagnosticSAV__c</fullName>
    <description>Date du premier rendez-vous de diagnostic SAV</description>
    <label>Premier diagnostic SAV</label>
    <type>Date</type>
</CustomField>