force-app/main/default/objects/KContrat__c/fields/premiereInstallation__c.field-meta.xml
<CustomField>
    <fullName>premiereInstallation__c</fullName>
    <description>Date du premier rendez-vous d&apos;installation</description>
    <label>Première installation</label>
    <type>Date</type>
</CustomField>