force-app/main/default/objects/KContrat__c/fields/premiereInterventionSAV__c.field-meta.xml
<CustomField>
    <fullName>premiereInterventionSAV__c</fullName>
    <description>Date du premier rendez-vous d&apos;intervention SAV</description>
    <label>Première intervention SAV</label>
    <type>Date</type>
</CustomField>