force-app/main/default/objects/KContrat__c/fields/premierMetrage__c.field-meta.xml
<CustomField>
    <fullName>premierMetrage__c</fullName>
    <description>Date du premier rendez-vous de métrage</description>
    <label>Premier métrage</label>
    <type>Date</type>
</CustomField>