force-app/main/default/objects/KContrat__c/fields/prochaineInstallation__c.field-meta.xml
<CustomField>
    <fullName>prochaineInstallation__c</fullName>
    <description>Date/heure de début du prochain rendez-vous d&apos;installation</description>
    <inlineHelpText>Date/heure de début du prochain rendez-vous d&apos;installation</inlineHelpText>
    <label>Prochain RDV d&apos;installation</label>
    <type>DateTime</type>
</CustomField>