force-app/main/default/objects/KContrat__c/fields/prochainMetrage__c.field-meta.xml
<CustomField>
    <fullName>prochainMetrage__c</fullName>
    <description>Date/heure de début du prochain rendez-vous de métrage</description>
    <inlineHelpText>Date/heure de début du prochain rendez-vous de métrage</inlineHelpText>
    <label>Prochain RDV de métrage</label>
    <type>DateTime</type>
</CustomField>