force-app/main/default/objects/KContrat__c/fields/prochainSAV__c.field-meta.xml
<CustomField>
    <fullName>prochainSAV__c</fullName>
    <description>Date/heure de début du prochain rendez-vous d&apos;intervention SAV</description>
    <inlineHelpText>Date/heure de début du prochain rendez-vous d&apos;intervention SAV</inlineHelpText>
    <label>Prochain RDV d&apos;intervention SAV</label>
    <type>DateTime</type>
</CustomField>