force-app/main/default/objects/KContrat__c/fields/produits__c.field-meta.xml
<CustomField>
    <fullName>produits__c</fullName>
    <description>Liste des produits côtés</description>
    <label>Produits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>