force-app/main/default/objects/KContrat__c/fields/SGID__c.field-meta.xml
<CustomField>
    <fullName>SGID__c</fullName>
    <label>SGID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>