force-app/main/default/objects/KContrat__c/fields/statusSummary__c.field-meta.xml
<CustomField>
    <fullName>statusSummary__c</fullName>
    <formula>TRIM(libelleStatutContrat__c 
+ IF(iSNULL(dateResiliation__c), &apos;&apos;, &apos;(&apos; + TEXT(dateResiliation__c) + &apos;)&apos;)
+ &apos; / &apos; + TEXT(montantTTC__c)
+ &apos;€ / &apos; + TEXT(dateSignature__c) + &apos; (&apos; + TEXT(FLOOR((TODAY() - dateSignature__c)/365)) + &apos;)&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Résumé (Statut)</label>
    <type>Text</type>
</CustomField>