force-app/main/default/objects/KContrat__c/fields/statutPremierIEC__c.field-meta.xml
<CustomField>
    <fullName>statutPremierIEC__c</fullName>
    <label>Statut du 1er IEC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>