force-app/main/default/objects/KContrat__c/fields/telephoneSATCLI__c.field-meta.xml
<CustomField>
    <fullName>telephoneSATCLI__c</fullName>
    <formula>if (isBlank(compte__r.telephoneMobile__c), compte__r.telephoneDomicile__c, compte__r.telephoneMobile__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Téléphone SATCLI</label>
    <type>Text</type>
</CustomField>